--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
     "node-gd": "^1.1.0",
+    "request": "^2.67.0",
+    "requestify": "^0.1.17",
     "serve-favicon": "~2.3.0"
   }
 }
