--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "morgan": "~1.6.1",
     "request": "^2.67.0",
     "requestify": "^0.1.17",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "jade": "1.3.1",
+    "stylus": "0.44.0"
+  },
+  "devDependencies": {
+    "mocha": "1.16.2",
+    "superagent": "0.15.7",
+    "expect.js": "0.2.0"
   }
 }
+
