--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "client-sessions": "^0.7.0",
     "cookie-parser": "~1.3.5",
+    "crypto": "*",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "jade": "1.3.1",
     "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
     "request": "^2.67.0",
     "requestify": "^0.1.17",
     "serve-favicon": "~2.3.0",
-    "jade": "1.3.1",
     "stylus": "0.44.0"
   },
   "devDependencies": {
@@ -25,4 +27,3 @@
     "expect.js": "0.2.0"
   }
 }
-
