--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "1.3.1",
     "mongoose": "^4.3.4",
     "morgan": "~1.6.1",
+    "reporter-file": "^1.0.0",
     "request": "^2.67.0",
     "requestify": "^0.1.17",
     "serve-favicon": "~2.3.0",
