--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "stylus": "0.44.0"
   },
   "devDependencies": {
+    "expect.js": "0.2.0",
     "mocha": "1.16.2",
     "superagent": "0.15.7",
-    "expect.js": "0.2.0"
+    "xunit-file": "0.0.9"
   }
 }
