--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "expect.js": "0.2.0",
     "mocha": "1.16.2",
     "superagent": "0.15.7",
+    "supertest": "^1.2.0",
+    "supertest-session": "^2.0.1",
     "xunit-file": "0.0.9"
   }
 }
