Adds tests for tags and questions

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 node_modules
 data
+.idea/GraphwhyBackend.iml
+
+.idea/encodings.xml
+
+.idea/codeStyleSettings.xml
+
+.idea/jsLibraryMappings.xml
+
+.idea/libraries/GraphwhyBackend_node_modules.xml
+
+.idea/misc.xml
+
+.idea/modules.xml
+
+.idea/vcs.xml
+
+.idea/workspace.xml
